FIX expandCollapse Problem

--- a/frontendserver/app/assets/stylesheets/app.less
+++ b/frontendserver/app/assets/stylesheets/app.less
@@ -220,6 +220,42 @@ div.popupMenu {
 	}
 }
 
+.auto-tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.auto-tooltip .auto-tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: transparent;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: relative;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.auto-tooltip .auto-tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+.auto-tooltip:hover .auto-tooltiptext {
+    visibility: visible;
+}
+
 .md-select {
     margin: 20px 0;
     align-items: center;
